# simple_pose_tracking

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run.py
src/: __init__.py  detection.py  detector.py  detectors.py  streamer.py  tracker.py
src/tracking/: __init__.py  kalman_filter.py  trackers.py
utils/: __init__.py  label_utils.py  video_viewer.py  video_writer.py
